--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <span class="social-label">Twitter</span>
       </button><br><br>  <!-- Custom Context Menu -->
       <div id="custom-context-menu" style="display:none;position:fixed;z-index:9999;border-radius:12px;box-shadow:0 4px 24px rgba(0,0,0,0.15);padding:8px 0;min-width:180px;font-family:Roboto,sans-serif;">
-        <div class="context-menu-item" id="copy-website" style="padding:10px 20px;cursor:pointer;">📋 Copy this website</div>
+        <div class="context-menu-item" id="copy-website" style="padding:10px 20px;cursor:pointer;"><a href="https://zardakgg.github.io/profile/">📋 Copy this website</a></div>
         <div class="context-menu-item" id="view-github" style="padding:10px 20px;cursor:pointer;">🔗 View this website's repository</div>
       </div>
       <button class="social_github" onclick="window.open('https://github.com/Dormanor');">
